--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-/* src/index.css */
+
+/* RESETS */
 *,
 *::before,
 *::after {
@@ -50,7 +51,7 @@ button,
 input {
   overflow: visible;
 }
-input[type=text] {
+input[type="text"] {
   border-radius: 0;
 }
 body {
@@ -67,7 +68,9 @@ body {
     line-height: 1.31579;
   }
 }
-.form-group > input[type=text] {
+/*END RESETS*/
+/* GLOBAL STYLES */
+.form-group > input[type="text"] {
   display: inline-block;
   margin-top: 0.4rem;
 }
@@ -81,7 +84,7 @@ body {
   border-width: 1px;
   border-color: #d3d3d3;
 }
-.btn.toggle-btn[aria-pressed=true] {
+.btn.toggle-btn[aria-pressed="true"] {
   text-decoration: underline;
   border-color: #4d4d4d;
 }
@@ -121,7 +124,7 @@ body {
   clip: rect(1px, 1px, 1px, 1px);
   white-space: nowrap;
 }
-[class*=stack] > * {
+[class*="stack"] > * {
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -142,6 +145,7 @@ body {
 .stack-exception {
   margin-top: 1.2rem;
 }
+/* END GLOBAL STYLES */
 .todoapp {
   background: #fff;
   margin: 2rem 0 4rem 0;
@@ -184,16 +188,16 @@ body {
   border-color: #4d4d4d;
   box-shadow: inset 0 0 0 2px;
 }
-[class*=__lg] {
+[class*="__lg"] {
   display: inline-block;
   width: 100%;
   font-size: 1.9rem;
 }
-[class*=__lg]:not(:last-child) {
+[class*="__lg"]:not(:last-child) {
   margin-bottom: 1rem;
 }
 @media screen and (min-width: 620px) {
-  [class*=__lg] {
+  [class*="__lg"] {
     font-size: 2.4rem;
   }
 }
@@ -201,6 +205,7 @@ body {
   width: 100%;
   margin: unset auto;
 }
+/* Todo item styles */
 .todo {
   display: flex;
   flex-direction: row;
@@ -218,6 +223,7 @@ body {
 .todo-text:focus {
   box-shadow: inset 0 0 0 2px;
 }
+/* CHECKBOX STYLES */
 .c-cb {
   box-sizing: border-box;
   font-family: Arial, sans-serif;
@@ -232,14 +238,14 @@ body {
   clear: left;
 }
 .c-cb > label::before,
-.c-cb > input[type=checkbox] {
+.c-cb > input[type="checkbox"] {
   box-sizing: border-box;
   top: -2px;
   left: -2px;
   width: 44px;
   height: 44px;
 }
-.c-cb > input[type=checkbox] {
+.c-cb > input[type="checkbox"] {
   -webkit-font-smoothing: antialiased;
   cursor: pointer;
   position: absolute;
@@ -263,7 +269,7 @@ body {
   border: 2px solid currentColor;
   background: transparent;
 }
-.c-cb > input[type=checkbox]:focus + label::before {
+.c-cb > input[type="checkbox"]:focus + label::before {
   border-width: 4px;
   outline: 3px dashed #228bec;
 }
@@ -282,7 +288,6 @@ body {
   opacity: 0;
   background: transparent;
 }
-.c-cb > input[type=checkbox]:checked + label::after {
+.c-cb > input[type="checkbox"]:checked + label::after {
   opacity: 1;
 }
-/*# sourceMappingURL=index.css.map */
